--- a/CTEP/packages.config
+++ b/CTEP/packages.config
@@ -10,6 +10,13 @@
   <package id="Microsoft.AspNet.Mvc.zh-Hans" version="5.2.7" targetFramework="net46" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net46" />
   <package id="Microsoft.AspNet.Razor.zh-Hans" version="3.2.7" targetFramework="net46" />
+  <package id="Microsoft.AspNet.SignalR" version="2.2.2" targetFramework="net46" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="2.2.2" targetFramework="net46" />
+  <package id="Microsoft.AspNet.SignalR.Core.zh-Hans" version="2.2.2" targetFramework="net46" />
+  <package id="Microsoft.AspNet.SignalR.JS" version="2.2.2" targetFramework="net46" />
+  <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.2.2" targetFramework="net46" />
+  <package id="Microsoft.AspNet.SignalR.SystemWeb.zh-Hans" version="2.2.2" targetFramework="net46" />
+  <package id="Microsoft.AspNet.SignalR.zh-Hans" version="2.2.2" targetFramework="net46" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.Web.Optimization.zh-Hans" version="1.1.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.7" targetFramework="net46" />
@@ -23,8 +30,15 @@
   <package id="Microsoft.AspNet.WebPages.zh-Hans" version="3.2.7" targetFramework="net46" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net46" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net46" />
+  <package id="Microsoft.Owin" version="4.0.0" targetFramework="net46" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="4.0.0" targetFramework="net46" />
+  <package id="Microsoft.Owin.Host.SystemWeb.zh-Hans" version="4.0.0" targetFramework="net46" />
+  <package id="Microsoft.Owin.Security" version="4.0.0" targetFramework="net46" />
+  <package id="Microsoft.Owin.Security.zh-Hans" version="4.0.0" targetFramework="net46" />
+  <package id="Microsoft.Owin.zh-Hans" version="4.0.0" targetFramework="net46" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net46" />
   <package id="Modernizr" version="2.8.3" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net46" />
+  <package id="Owin" version="1.0" targetFramework="net46" />
   <package id="WebGrease" version="1.6.0" targetFramework="net46" />
 </packages>
