--- a/CTEP/CTEP.csproj
+++ b/CTEP/CTEP.csproj
@@ -176,6 +176,7 @@
     <Compile Include="Controllers\UserHandleController.cs" />
     <Compile Include="Controllers\UserInfoesController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
+    <Compile Include="Filter\AuthorActionFilterAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
